--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,40 @@
 .gh-addressbook ul {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 .gh-addressbook li {
-    list-style: none;
-    display: block;
-    float: left;
-    margin: 0.3em;
+  list-style: none;
+  display: block;
+  float: left;
+  margin: 0.3em;
 }
 
 .gh-user {
-    margin: 0;
-    padding: 0.2em;
-    width: 13em;
-    height: 9em;
-    border: 1px solid #666;
-    border-radius: 0.2em;
+  position: relative;
+  margin: 0;
+  padding: 0.2em;
+  width: 200px;
+  border-radius: 0.2em;
+  border: 1px solid black;
+}
+
+.gh-user h1{
+  font-size: 1.25em;
+  margin-bottom: 3px;
+  margin-top: 3px;
+}
+
+.gh-user p{
+  font-size: 1em;
+  margin-top: 3px;
+  margin-bottom: 3px;
+}
+
+.gh-user a{
+  font-size: 1em;
+}
+
+.gh-user img{
+  box-sizing: border-box;
+  width: 30%;
 }
